<resources>
    <string name="app_name">Weatherly</string>

    <string name="hello">Witaj!</string>
    <string name="wind">Wiatr</string>
    <string name="humidity">Wilgotność</string>
    <string name="pressure">Ciśnienie</string>

    <string name="temp_value">%1$d°</string>
    <string name="wind_speed_value">%1$dm/s</string>
    <string name="humidity_value">%1$d%%</string>
    <string name="pressure_value">%1$dhPa</string>
    <string name="clouds_value">Zachmurzenie: %1$d%%</string>
    <string name="temp_max_value">%1$d°</string>
    <string name="temp_min_value">%1$d°</string>
    <string name="feels_like_temp">Temp. odczuwalna: %1$d°</string>
    <string name="sunrise">Wschód słońca</string>
    <string name="sunset">Zachód słońca</string>

    <string name="location_permission">Lokalizacja GPS</string>
    <string name="location_permission_desc">Lokalizacja urządzenia jest wymagana do poprawnego działania aplikacji.</string>
    <string name="ok">OK</string>

    <string name="no_network_connection">Brak połączenia z internetem</string>
    <string name="try_again">Spróbuj ponownie</string>
</resources>
