<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">


    <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="20dp">

        <TextView
            android:id="@+id/helloLbl"
            style="@style/TextAppearance.MaterialComponents.Headline4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/hello"
            android:textColor="@color/colorBlack"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/cityNameLbl"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="6dp"
            android:drawablePadding="10dp"
            android:textSize="20sp"
            app:drawableStartCompat="@drawable/ic_baseline_near_me_24"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/helloLbl" />

        <com.google.android.material.card.MaterialCardView
            android:id="@+id/primaryCardView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            app:cardBackgroundColor="@color/colorPrimary"
            app:cardCornerRadius="16dp"
            app:layout_constraintTop_toBottomOf="@+id/cityNameLbl">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <ImageView
                    android:id="@+id/weatherIcon"
                    android:layout_width="70dp"
                    android:layout_height="70dp"
                    android:layout_margin="20dp"
                    app:layout_constraintBottom_toBottomOf="@+id/currentTempLbl"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="@+id/currentTempLbl" />

                <TextView
                    android:id="@+id/currentTempLbl"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="12dp"
                    android:textColor="@color/colorOnPrimary"
                    android:textSize="60sp"
                    android:textStyle="bold"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <TextView
                    android:id="@+id/maxTempLbl"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="4dp"
                    android:textColor="@color/colorOnPrimary"
                    app:drawableStartCompat="@drawable/ic_baseline_arrow_upward_24"
                    app:drawableTint="@color/colorOnPrimary"
                    app:layout_constraintStart_toStartOf="@+id/currentTempLbl"
                    app:layout_constraintTop_toBottomOf="@+id/currentTempLbl" />

                <TextView
                    android:id="@+id/minTempLbl"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="4dp"
                    android:textColor="@color/colorOnPrimary"
                    app:drawableStartCompat="@drawable/ic_baseline_arrow_downward_24"
                    app:drawableTint="@color/colorOnPrimary"
                    app:layout_constraintEnd_toEndOf="@+id/currentTempLbl"
                    app:layout_constraintTop_toBottomOf="@+id/currentTempLbl" />

                <TextView
                    android:id="@+id/cloudsLbl"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@color/colorOnPrimary"
                    app:layout_constraintStart_toStartOf="@+id/weatherIcon"
                    app:layout_constraintTop_toBottomOf="@+id/currentTempLbl" />

                <TextView
                    android:id="@+id/currentWeatherDescLbl"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@color/colorOnPrimary"
                    android:textSize="16sp"
                    android:textStyle="bold"
                    app:layout_constraintStart_toStartOf="@+id/weatherIcon"
                    app:layout_constraintTop_toBottomOf="@+id/cloudsLbl" />

                <TextView
                    android:id="@+id/feelsLikeWeatherLbl"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="20dp"
                    android:textColor="@color/colorOnPrimary"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintStart_toStartOf="@+id/weatherIcon"
                    app:layout_constraintTop_toBottomOf="@+id/currentWeatherDescLbl" />

            </androidx.constraintlayout.widget.ConstraintLayout>
        </com.google.android.material.card.MaterialCardView>

        <com.google.android.material.card.MaterialCardView
            android:id="@+id/secondaryCardView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            app:cardBackgroundColor="@color/colorBlack"
            app:cardCornerRadius="16dp"
            app:layout_constraintTop_toBottomOf="@+id/primaryCardView">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="20dp">

                <TextView
                    android:id="@+id/windLbl"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/wind"
                    android:textColor="@color/colorOnPrimary"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.05"
                    app:layout_constraintHorizontal_chainStyle="spread_inside"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <TextView
                    android:id="@+id/windValueLbl"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@color/colorOnPrimary"
                    android:textStyle="bold"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="@+id/windLbl"
                    app:layout_constraintStart_toStartOf="@+id/windLbl"
                    app:layout_constraintTop_toBottomOf="@+id/windLbl" />

                <TextView
                    android:id="@+id/humidityLbl"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/humidity"
                    android:textColor="@color/colorOnPrimary"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.5"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <TextView
                    android:id="@+id/humidityValueLbl"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@color/colorOnPrimary"
                    android:textStyle="bold"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="@+id/humidityLbl"
                    app:layout_constraintStart_toStartOf="@+id/humidityLbl"
                    app:layout_constraintTop_toBottomOf="@+id/humidityLbl" />

                <TextView
                    android:id="@+id/pressureLbl"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/pressure"
                    android:textColor="@color/colorOnPrimary"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.95"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <TextView
                    android:id="@+id/pressureValueLbl"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@color/colorOnPrimary"
                    android:textStyle="bold"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="@+id/pressureLbl"
                    app:layout_constraintStart_toStartOf="@+id/pressureLbl"
                    app:layout_constraintTop_toBottomOf="@+id/pressureLbl" />

            </androidx.constraintlayout.widget.ConstraintLayout>
        </com.google.android.material.card.MaterialCardView>

        <com.google.android.material.card.MaterialCardView
            android:id="@+id/sunCardView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            app:cardBackgroundColor="@color/colorOnPrimary"
            app:cardCornerRadius="16dp"
            app:layout_constraintTop_toBottomOf="@+id/secondaryCardView">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="20dp">

                <TextView
                    android:id="@+id/sunriseLbl"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/sunrise"
                    android:textColor="@color/colorBlack"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.1"
                    app:layout_constraintHorizontal_chainStyle="spread_inside"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <TextView
                    android:id="@+id/sunriseValueLbl"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@color/colorBlack"
                    android:textStyle="bold"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="@+id/sunriseLbl"
                    app:layout_constraintStart_toStartOf="@+id/sunriseLbl"
                    app:layout_constraintTop_toBottomOf="@+id/sunriseLbl" />

                <TextView
                    android:id="@+id/sunsetLbl"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/sunset"
                    android:textColor="@color/colorBlack"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.9"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <TextView
                    android:id="@+id/sunsetValueLbl"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@color/colorBlack"
                    android:textStyle="bold"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="@+id/sunsetLbl"
                    app:layout_constraintStart_toStartOf="@+id/sunsetLbl"
                    app:layout_constraintTop_toBottomOf="@+id/sunsetLbl" />

            </androidx.constraintlayout.widget.ConstraintLayout>
        </com.google.android.material.card.MaterialCardView>

    </androidx.constraintlayout.widget.ConstraintLayout>

    <include
        android:id="@+id/loaderView"
        layout="@layout/view_loader" />
</FrameLayout>